# univoice-dapp

./: .gitmodules  Cargo.toml  README.md  dfx.json  fix-dependencies.sh  package-lock.json  package.json  uploader.pem
src/univoice-dapp-backend/: Cargo.toml  univoice-dapp-backend.did
src/univoice-dapp-backend/src/: activate_types.rs  buss_types.rs  constants.rs  ic_oss.rs  ic_oss_dapp.rs  lib.rs  license_types.rs  voice_oss_type.rs
src/univoice-dapp-frontend/: README.md  index-dev.html  index.html  jsconfig.json  package.json  temp-fix.patch  testIdentity.ts  tsconfig.json  vite.config.js  vite.dev.config.js
src/univoice-dapp-frontend/.certificates/: cert.pem  key.pem
src/univoice-dapp-frontend/custom-assets/: asset-manifest.json
src/univoice-dapp-frontend/public/: .ic-assets.json5  recordvoice.lottie
src/univoice-dapp-frontend/server/: index.js
src/univoice-dapp-frontend/src/: App.jsx  App.tsx  index.scss  main.dev.tsx  main.tsx
src/univoice-dapp-frontend/src/assets/: sound1.json
src/univoice-dapp-frontend/src/components/: bottom-menu.module.scss  bottom-menu.tsx  invite-code.module.scss  invite-code.tsx  loading.module.scss  loading.tsx  modal-dialog.tsx  record-voice.module.scss  record-voice.tsx  scroll-to-bottom.jsx  task-item.module.scss  task-item.tsx  timer.tsx  toast.tsx  voice-list-item.module.scss  (+3 more)
univoice-dapp/: .gitignore  package.json
univoice-dapp/src/univoice-dapp-backend/: Cargo.toml
univoice-dapp/src/univoice-dapp-backend/src/: lib.rs
univoice-dapp/src/univoice-dapp-frontend/: package.json
univoice-dapp_bak/: README.md
(+30 files in other folders)
