[package]
name = "univoice-dapp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"

ic-stable-structures = "0.6"
icrc-ledger-types = "0.1.5"
icrc-nft-types = { git = "https://github.com/pramitgaha21/icrc-nft-types.git" }
ciborium = "0.2"
serde = "1"
serde_bytes = "0.11"
serde_cbor = "0.11"
getrandom = { version = "0.2", features = ["custom"] }
rand = { version = "0.8", features = ["small_rng", "std_rng", "std"], default-features = false }
ic-oss-types = "1.0.0"
ic-oss-can = "1.0.0"
hex = "0.4"
base64 = "0.21"
