[package]
name = "univoice-dapp-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers

ic-stable-structures = "0.5"
ciborium = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["getrandom"] }
ic-oss-types = "1.0.0"
ic-oss-can = "1.0.0"
